my-website/versioned_docs/version-1.8.0/guide/release-notes.mdx
---
title: "Release Notes"
sidebarTitle: "Release Notes"
---

## Tabsdata 1.8.0

**March 19, 2026**

What is New:

- New Source connectors: Db2 CDC, MySQL CDC, and Postgres CDC.
- New Destination connectors: ClickHouse, StarRocks, and Apache Druid.
- UI, navigation improvements, new look & feel.

Known issues:

- Some tabsdata binaries are linked against a Homebrew-installed liblzma library during the build process, creating a runtime dependency on `/opt/homebrew/opt/xz/lib/liblzma.5.dylib`. If the library is not installed in your system, commands like `tdserver` will fail with the error `/opt/homebrew/opt/xz/lib/liblzma.5.dylib (no such file)`. - **Workaround**: Install the required library by running: `brew install xz` This will be corrected in the next release.

## Tabsdata 1.7.1

**February 25, 2026**

What is New:

- New Source connector: Db2.

## Tabsdata 1.7.0

**February 24, 2026**

What is New:

- UI navigation re-design for improved user experience.
- User-friendly IDs for Execution Plans, Transactions, and Data Versions.
- Improved documentation across the platform.

## Tabsdata 1.6.0

**Februrary 3, 2026**

What is New:

- KafkaTrigger, a Kafka topic consumer to load messages into Tabsdata tables.
- CronTrigger, periodic triggering of publishers/subscribers/transformers.
- Declarative data quality API for validation, classification and quarantining data.
- New SQL connectors supporting Database transactions both for publishers and subscribers.
- Revamped UI navigation.

Known issues:

- When installing tabsdata with uv as the package manager, the databricks-sql-connector dependency must be pinned to version 4.2.0. For example: `uv pip install "tabsdata[all]==1.6.0" "databricks-sql-connector==4.2.0"`
- To have the tabsdata agent working, you need to edit the file ``~/.tabsdata/instances/tabsdata/workspace/config/proc/regular/aiagent/config/requirements.txt`, and replace `tabsdata_agent` with `tabsdata-agent`. This will get corrected in the next release.

## Tabsdata 1.5.1

**November 18, 2025**

Fixes a 1.5.0 regression that stopped parts of the UI from working correctly.

## Tabsdata 1.5.0

**November 15, 2025**

Tabsdata 1.5.0 is here!

**What’s New?**

- **Version System Columns:** All TableFrames now have a set of system columns with version information (execution ID, transaction ID, version ID and timestamp). Having these system columns enable advanced multi-time query functionality.
- BigQuery Subscriber Connector.
- Several improvements and new functionality for Lineage/Execution graphs in the UI.

## Tabsdata 1.4.0

**October 20, 2025**

Tabsdata 1.4.0 is here!

**What’s New?**

- Tabsdata AI agent (Preview). Explore collections and tables, and create publishers and subscriber using a natural language interface.
- User Defined Functions support. Integrate custom logic or external functions with TableFrame’s processing.
- Interactive Execution/Lineage graphs in the UI.

## Tabsdata 1.3.0

**September 26, 2025**

Tabsdata 1.3.0 is here!

**What’s New?**

- Google Cloud Storage publisher and subscriber connectors
- Avro Support for publishing and subscribing using file based connectors (File, S3, Azure storage, Google Cloud Storage)
- Salesforce reports publisher connector
- Grok parser support for TableFrames columns
- Permissions CLI

**Improvements:**

- Minor CLI usability improvements
- Minor UI usability improvements
- Non functional improvements

## Tabsdata 1.2.0

**August 14, 2025**

Tabsdata 1.2.0 is here!

**What’s New?**

- New publisher and subscriber connectors for Microsoft SQL Server.
- UI usability improvements.

## Tabsdata 1.1.0

**August 4, 2025**

Tabsdata 1.1.0 is here!

**What’s New?**

- Internal module reorganization to clearly separate public and private APIs.
- No user-facing changes.

## Tabsdata 1.0.0

**July 24, 2025**

Tabsdata 1.0.0 is here!

**What’s New?**

- Browser Interface: You can now interact with various powerful functionalities of Tabsdata using the browser interface.
- **New Connectors:** Built-in support for Snowflake and Databricks is now live. Seamless integrations, out of the box.
- Catalog Support: Enhanced support for Unity Catalog, and AWS Glue Catalog, with Parquet format compatibility.
- CLI **Improvements:** We’ve reimagined the CLI experience with streamlined commands and contextual hints to make onboarding easier.
- **Richer Metadata:** We’re capturing and displaying more metadata to give users better visibility and control over their data.
- **Backend Enhancements:** Under-the-hood upgrades to improve security, stability, and scalability in production environments.

## Tabsdata 0.9.6

**April 24, 2025**

Tabsdata 0.9.6 is here!

**What’s New?**

- Changes logs from ANSI to ASCII.
- Improved schema inference when publishing files into Tabsdata.
- Added column rename to TableFrames.
- Fixed initial_values bugs on first run and when there is no additional incremental data.

## Tabsdata 0.9.5

**April 12, 2025**

Tabsdata 0.9.5 is here!

**What’s New?**

- AWS Glue Iceberg connector to seamlessly subscribe data from Tabsdata to AWS as Iceberg Tables.
- MongoDB destination connector to seamlessly subscribe data from Tabsdata to MongoDB.
- Richer support for Hashicorp Vault.
- Corrections and restructuring in documentation.

## Tabsdata 0.9.3

**March 14, 2025**

Tabsdata 0.9.3 is here!

**What’s New?**

- Salesforce connector to seamlessly publish data from Salesforce to Tabsdata.
- Stronger security protocols with support for Hashicorp secrets.
- Isolation of the server’s python environment from that of the user for better controls.

## Tabsdata 0.9.2

**February 28, 2025**

Tabsdata 0.9.2 is here!

**What’s New?**

- Improvements in CLI experience
- Enhancements in backend to debug edge cases and performance improvement

## Tabsdata 0.9.1

**February 14, 2025**

Tabsdata 0.9.1 is here!

**What’s New?**

- Python 3.13 support
- New `TableFrame.item(self)` method for extracting a single value from Tabsdata TableFrames
- Renamed some TableFrame classes for better clarity
- Corrections and restructuring in documentation
